home page spacing issue fixed

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -32,9 +32,10 @@
 	background:url('/assets/dots.svg') no-repeat center center;
 	padding:12px 0px;
 }
-/* banner section styling */
+/* ===============================banner section styling=============================== */
 .banner-wrapper{
 	background-image: linear-gradient(to top, #00b1ff, #0051be 53%, #00319c 67%, #00091d);
+	position: relative;
 }
 .extra-padding{
 padding-bottom:185px;
@@ -42,22 +43,43 @@ padding-bottom:185px;
 .banner-inner{
  color:#fff;
  padding:42px 0;
+ 
+ 
+}
+.dot-box{
+	width:94px;
+	height:152px;
+	position:absolute;
+	right:-15px;
+	top:57px;
+	background: url('/assets/small-dots.png') left top;
+	opacity: 0.1;
+	z-index:0;
 }
 .banner-txt{
 	text-align: center;
 	h3{
 		margin-top:16px;
+		font-size:1.4rem;
+		line-height: 2.0rem;
 	}
-	button{
-		margin:32px 0;
+	.banner-blue-btn{
+		margin:32px 0 0 0;
+		padding:0 41px;
+		min-height:52px;
+		font-size:1.6rem;
+		line-height: 2.0rem;
+		font-weight:600;
 	}
 }
-.banner-btn{
-	margin-bottom:32px;
+.banner-btn-box{
 	img{
 		display:block;
 		margin:0 auto;
 	}
+}
+.banner-pic{
+	margin-top:44px;
 }
 .banner-heading1{
 	font-size:2.2rem;
@@ -72,14 +94,38 @@ padding-bottom:185px;
 .dots{
 	position: relative;
 }
-// payment section style
+/* only for home page btn */
+.btn-align-row{
+	padding-bottom:133px;
+	.position-default{
+		position:static;
+	}
+	.banner-btn-box{
+		position: absolute;
+		bottom:42px;
+		left:50%;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+	.banner-blue-btn{
+		min-width:184px;
+		padding:0 25px;
+	}
+	img{
+		margin-top:30px;
+	}
+}
+/* only for home page btn */
+
+
+/* ======================== payment section style ====================== */
 .payment-wrap{
 margin-top:-185px;
 }
 .payment-box{
-	padding:20px;
+	padding:14px 20px 22px 20px;
 	width:100%;
-	min-height:256px;
+	
 	background:$white;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
@@ -104,9 +150,7 @@ margin-top:-185px;
 		border-bottom:none;
 	}
 }
-.corp-solution-wrap{
-	margin-bottom:32px;
-}
+
 .payment-heading{
 	margin-top:12px;
 	margin-bottom:8px;
@@ -114,16 +158,40 @@ margin-top:-185px;
 	font-weight: 800;
 }
 .payment-btn-wrap{
-	margin-top:24px;
+	margin-top:21px;
 	button{
 		&:first-child{
 			margin-right:12px;
 		}
 	}
 }
-// Choose Paytm for your Business
+/* =========================corporate solution for your business ========================== */
+.corp-solution-wrap{
+	margin-bottom:32px;
+	.global-heading{
+		margin-top:5px;
+	}
+	.payment-heading{
+		margin-top:8px;
+		margin-bottom:13px;
+	}
+}
+/* ======================== Choose Paytm for your Business ============================ */
+.business-row-box{
+	padding-right:0;
+	&:last-child{
+		.business-step-box{
+			margin-bottom:0;
+			
+		}
+		.step-box-detail{
+			border-bottom:none;
+		}
+	}
+}
 .business-step-box{
-padding:24px 0 0 0;
+padding:0 0 0 0;
+margin-bottom:24px;
 
 }
 .blue-box{
@@ -141,11 +209,15 @@ padding:24px 0 0 0;
 	width:calc(100% - 60px);
 	display:inline-block;
 	border-bottom: 1px solid $line;
-	padding:0 0 24px 0px;
+	padding:0 15px 22px 0px;
 	margin-left:16px;
 	p{
 		margin:8px 0 12px 0;
 	}
+	.terms-para{
+		margin-top:3px;
+		margin-bottom:0;
+		}
 }
 .btn-strip{
  border:1px solid $line;
@@ -160,9 +232,10 @@ padding:24px 0 0 0;
 	 font-weight: 800;
  }
 }
-/* client slider section */
+
+/* =========================== client slider section ============================= */
 .client-wrap{
-	margin:30px 0 0 0;
+	margin:12px 0 0 0;
 }
 .client-box{
 	width:33.33%;
@@ -189,9 +262,9 @@ padding:24px 0 0 0;
 	margin-bottom:32px;
 }
 
-/* testimonial */
+/* ===================== testimonial ====================== */
 .testimonial-box{
-	padding:16px;
+	padding:17px 16px 16px 16px;
 	position: relative;
 	-webkit-border-radius:9px;
 	-moz-border-radius:9px;
@@ -202,23 +275,31 @@ padding:24px 0 0 0;
 }
 .testimonial-main-heading{
 text-align:center;
-padding:47px 0 56px 0;
+padding:47px 0 46px 0;
 background:url('/assets/dots.svg') no-repeat center top;
 h3{
 	font-size: 2.4rem;
 	line-height: 2.8rem;
 	font-weight:800;
 	padding:0 20px;
+	span{
+		&:first-child{
+			margin-right:15px;
+		}
+		&:last-child{
+			margin-left:15px;
+		}
+	}
 }
 }
 .test-heading{
 	font-size:1.4rem;
 	line-height: 2.0rem;
 	font-weight: 800;
-	margin-bottom: 12px;
+	margin-bottom: 8px;
 }
 .test-img-box{
-	margin-top:35px;
+	margin-top:29px;
 	div{
 		max-width:230px;
 	}
@@ -247,19 +328,33 @@ h3{
 		max-width:1110px;
 		margin:0 auto;
 	}
+	/* ===============================banner section styling=============================== */
+	.banner-inner{
+		padding-bottom:53px;
+	}
+	.dot-box{
+		width:190px;
+		top:136px;
+	}
 	.banner-txt{
-		width:50%;
-		display:inline-block;
 		text-align:left;
 		h2{
-			margin-top:100px;
+			margin-top:95px;
 			
+		}
+		h3{
+			font-size:1.6rem;
+			font-weight: normal;
+			max-width:395px;
+		}
+		.banner-blue-btn{
+			min-height:56px;
 		}
 	}
 	.banner-pic{
-		width:50%;
-		display:inline-block;
+		margin-top:6px;
 	}
+	
 	.banner-heading1{
 		font-size:3.6rem;
 		line-height: 4.2rem;
@@ -270,10 +365,38 @@ h3{
 		position: relative;
 		right:-30px;
 	}
+/* only for home page btn */
+.btn-align-row{
+	padding-bottom:0px;
+	.position-default{
+		position:relative;
+	}
+	.banner-btn-box{
+		position: static;
+		bottom:0;
+		left:0;
+		-webkit-transform: none;
+		transform: none;
+	}
+	.banner-blue-btn{
+		min-width:184px;
+		padding:0 25px;
+	}
+	img{
+		margin-top:30px;
+	}
+}
+/* only for home page btn */
+
+
+
+
+
+/* ======================== payment section style ====================== */
 	.payment-box{
 		
 		background: $white;
-		padding:40px;
+		padding:22px 40px 40px 40px;
 		svg{
 			width:110px;
 			height:83px;
@@ -289,6 +412,8 @@ h3{
 	.payment-heading{
 		margin-bottom:16px;
 	}
+
+	/* ======================== Choose Paytm for your Business ============================ */
 	.business-steps{
 		.row{
 			margin:0;
@@ -307,16 +432,27 @@ h3{
 		&:nth-child(1),&:nth-child(2),&:nth-child(3){
 			border-top:none;
 		}
-		div.col-md-4{
-			
-		}
 		
+		&:nth-child(4),&:nth-child(5),&:nth-child(6){
+			padding-top:48px;
+			.business-step-box{
+				margin-bottom:0;
+				padding-bottom:0;
+				.step-box-detail{
+					padding-bottom:0;
+					p{
+						margin-bottom:0;
+					}
+				}
+			}
+		}
 		
 	}
 
 	.business-step-box{
+		padding:0px 15px 15px 45px;
+		margin-bottom:6px;
 		
-		padding:40px 15px 15px 45px;
 		
 	}
 	.step-box-detail{
@@ -350,9 +486,41 @@ h3{
     		cursor: pointer;
 		}
 	}
-	/* global for desktop*/
+	/* =========================corporate solution for your business ========================== */
+	.corp-solution-wrap{
+		.global-heading{
+			margin-bottom:80px;
+		}
+		.payment-heading{
+			margin-top:8px;
+		}
+	}
+	.corp-line{
+		border-bottom: 1px solid $line;
+		margin-bottom:151px;
+		padding-bottom:106px;
+	}
+	.btn-strip{
+		padding:0 40px;
+	}
+	/* =========================== client slider section ============================= */
+	.client-wrap{
+		margin-top:152px;
+	}
+	.client-box{
+		width:16.666%;
+	}
+
+
+	.client-heading{
+		font-size:2.4rem;
+		line-height:3.2rem;
+		margin:80px 0;
+	}
+	/* ================= global for desktop ===================== */
+	
 	.global-heading{
-		margin:97px 0 110px 0;
+		margin:135px 0 140px 0;
 		padding-bottom:0;
 		position: relative;
 		&.bg-bottom{
@@ -395,17 +563,7 @@ h3{
 	.dsktp-pad-bottom0{
 		padding-bottom:0;
 	}
-	/* global end*/
-	.btn-strip{
-		padding:0 40px;
-	}
-	.client-box{
-		width:16.666%;
-	}
-	.client-heading{
-		font-size:2.4rem;
-		line-height:3.2rem;
-		margin:80px 0;
-	}
+	/* global end */
+	
 	
 }
