--- a/src/style/common/_common.scss
+++ b/src/style/common/_common.scss
@@ -145,3 +145,8 @@ main{
     width: 100%;
   }
 }
+@media(min-width:768px){
+  .d-md-none{
+		display:none!important;
+	}
+}
